2026.1/Lab_instructions/lab2.md
# Лабораторная работа 2

## Настройка PS часть 1 и Hello World

## Обзор

В конце первой лабораторной работы мы в созданный Block Design при помощи IP Integrator добавили процессорную систему ARM. Когда мы дважды нажали на IP в Block Design, появилось средство кастомизации IP (Zynq Re-customize IP tool). В этой лабораторной работе мы продолжим настраивать нашу вычислительную подсистему, добавив туда периферию UART, настроив внутренний источник тактовых сигналов, и установив собственный контроллер памяти DDR. После окончания мы экспортируем нашу систему в Vitis и создадим простое приложение Hello World.

## Цель работы

После выполнения лабораторной работы вы сможете:

* Включать и настраивать периферию Zynq PS UART.
* Настраивать клоки и память для Zynq PS.
* Собирать аппаратную платформу.
* Экспортировать сбору в Vitis.
* Создавать и запускать Hello_World-приложение.

## Эксперимент 1: Включение и настройка  периферии Zynq PS UART

Для начала включим периферию UART и разместим ее входы/выходы в MIO.

---

### **Обобщенная инструкция:**

Установите напряжение банков LVCMOS 3.3V для Bank 0 и LVCMOS 1.8V для Bank 1. Включите UART1 и подключите ее входы/выходы к MIO[48:49].

---

### **Пошаговая инструкция:**

1. Если еще не открыто, открой созданный ранее проект *ZynqDesign* и откройте Block Design **Z_system.bd**. Дважды нажмите на *Zynq PS* для кастомизации PS. Окно *Zynq Block Design* демонстрирует, что в данный момент никакая периферия или интерфейс Flash-памяти не подключена. На это указывает тот факт, что на всей I/O периферии и Flash-памяти отсутствует галочка, как показно на рисунке ниже. Это также свидетельствует о MIO также ни к чему не подключен.

    ![периферия Zynq](./resources/lab2/Zynq%20IO%20Peripherials.png)

2. В боковой панели окна *Re-customize IP* выберите MIO Configuration и раскройте список **I/O Peripherials**.

    ![Конфигурация MIO](./resources/lab2/MIO%20Configuration.png)

3. В верху окна *MIO Configuration* находятся настройки напряжения банков. Установите *Bank 0 I/O Voltage* в значение **LVCMOS 3.3V** и *Bank 1 I/O Voltage* в значение **LVCMOS 1.8V**.

    ![Напряжение на банках MIO](./resources/lab2/MIO%20Bank%20Voltage.png)

    На данный момент никакая периферия не выбрана. Заметьте, что список периферий находится не в алфавитном порядке, а в порядке приоритетности в системе сверху вниз или как они насколько ограничено может быть их соединение с MIO. Периферия упорядочена как менее гибка вверху и более гибка внизу, за исключением USB, который может быть подключен только в одном месте.

    Во время работы с платой разработчик должен начать с верху, двигаясь вниз.Разработчик должен осторожно определить, какая периферия должна быть подключена к *MIO*, а какая к *EMIO*. Для упрощения эксперимента мы сфокусируемся только на одной периферии, чтобы показать как проходит весь процесс.

4. Для подключения доступны только два интерфейса *UART*. Установите чекбокс напротив **UART1**. Заметьте, что *UART1* может быть подключен к разным входам/выходам *MIO* и *EMIO* (Extended MIO). Установите значение *I/O* в **MIO48..49**, которое является значением по-умолчанию.

    ![Соединение UART1](./resources/lab2/UART1%20Connection.png)

5. В боковой панели *Page Navigator* выберите пункт **Zynq Block Design**. Заметьте, что в области *I/O Peripherals* напротив *UART 1* установлена галочка, что говорит о том, что эта периферия теперь подключена.

    ![UART1 соединен с MIO](./resources/lab2/UART1%20MIO%20Connected.png)

6. В окне с диаграммой *Zynq Block Design* нажмите на область **General Settings** или в боковой панели *Page Navigator* выберите пункт **PS-PL Configuration**.

    ![Общие настройки Zynq](./resources/lab2/General%20Zynq%20Settings.png)

7. Раскройте секцию *General* и удостоверьтесь, ято значение *Baud Rate* установлено в **115200**.

    ![Настройка Baud Rate UART1](./resources/lab2/UART1%20Baud%20Rate%20Settings.png)

---

### **Вопросы:**

* Как вы думаете, для чего нужен *EMIO*?

* Почему в *I/O Peripherals Configuration tool* периферия упорядочена не в алфавитном порядке?

* Вопрос со звездочкой: Если при включении периферии UART включить опцию *Modem Signal*, куда их следует разместить?

## Эксперимент 2: Настройка памяти и клоков в Zynq PS

Перед запуском простейшей программы должны быть настроены еще пара критических элементов Zynq PS. В них входят DDR3-память, так как в этой памяти будет работать наше приложение. Также для нашей системы должны быть правильно сконфигурированы клоки.

### **Обобщенная инструкция:**

Настройте *Memory GUI* для 32 битного интерфейса, используя компоненты памяти Micron DDR3. Настройте клоки для работы CPU на частоте 667 МГц и память на 533 МГц.

### **Пошаговая инструкция:**

1. Нажмите на область **Clock Generation** на диаграмме или выберете пункт **Clock Generation** на боковой панели.

    ![Генерация клока](./resources/lab2/Clock%20Configuration.png)

2. Нажмите на кнопку **Expand All** на верхней навигационной панели, чтобы увидеть все тактовые сигналы. Для большинства устройств значение частоты генератора импульсов соответствует настройкам платы *ZedBoard*. Удостоверьтесь, что значения следующие:

    * *Input frequency* - 33.33333 МГц
    * *CPU frequency* - 666.666666 МГц
    * *DDR frequency* - 533.333333 МГц

    ![Настройки клока](./resources/lab2/Clock%20Settings.png)

3. Сейчас нам требуется изменить значение настроек по-умолчанию. Один из *PL Fabric Clocks* включен, однако сейчас мы не используем PL. Выключите его, выставив соответствующий чекбокс в нужное положение.

    ![Выключите FCLK_CLK0](./resources/lab2/Disable%20FCLK_CLK0.png)

4. В добавок к отключению настроек *PL Fabric Clock* мы также должны отключить подключение AXI к PL. Это делает в *PS-PL Configuration*. Выберите пункт **PS-PL Configuration** и раскройте секцию **AXI Non Secure Enablement -> GP Master AXI Interface**. Отключите там **M AXI GP0 Interface** отключив чекбокс.

    ![Отключение M AXI GP0 Interface](./resources/lab2/Disable%20M%20AXI%20GP0%20Interface.png)

5. Теперь займемся контроллером памяти. На диаграмме выберите область **DDR2/3, LPDDR2 Controller** или в боковой навигационной области выберите пункт **DDR Configuration**.

    ![Конфигурация памяти DDR](./resources/lab2/DDR%20Memory%20Configuration.png)

6. Снова нажмите **Expand All**, чтобы увидеть все параметры памяти. Убедитесь, что чекбокс **Enable DDR** установлен.

    ![Параметры памяти и включение DDR](./resources/lab2/View%20Memory%20Parameters%20and%20Enable%20DDR.png)

7. Параметры, которые мы установим для DDR должны соответствовать плате, которую мы используем. Выставьте следующие параметры:
    
    * *Memory Type* - **DDR3**
    * *Memory Part* - **MT41J128M16 HA-15E**

    Обратите внимание на то, что настройки *Memory Part Configuration* автоматически обновятся при выборе *Memory Part*. Если ваше устройство памяти отсутствует в списке предустановленных, выберите **Custom**. Далее будут доступны поля для ручного ввода параметров вашей памяти.

    ![Параметры памяти](./resources/lab2/ZedBoard%20Memory%20Part%20Configuration.png)

8. В секции *DDR Controller Configuration* поле *Effective DRAM Bus Width* должно быть установлено **32-bits**, так как мы используем конфигурацию 2х16 DDR3. Так как мы используем DDR3 на устройствах 7z010 или 7z020 значение полей *ECC* и *Burst Length* предопределены. Обратите внимание, что частота работы автоматически была определена в окне *Clock Configuration* и равняется 533 МГц.

9. Установите чекбокс **Internal Vref**. Значение *Operating Temperature* должно быть **Normal (0-85)**.

    ![Параметры контроллера DDR](./resources/lab2/DDR%20Controller%20Configuration.png)

10. Далее настроим параметры *Training/Board Detail*. В секции *Dram Training* должны быть включены следующие 3 чекбоксы: *Write leveling*, *Read gate*, и *Read data eye*. Определение, что это такое можно найти в *Zynq TRM*, Параграф 10.6.8.

    ![Детали тренинга](./resources/lab2/Training%20Board%20Details.png)

    Обратите внимание, есть четыре поля ввода, позволяющие указать информацию о задержке *DQS* к *Clock Delay* (нс) и задержке *Board Delay* (нс) для каждой из четырех байтовых линий. Эти значения помогают алгоритму тренинга найти начальную точку в допустимом окне данных *DDR3*. По умолчанию все задержки равны 0.0. Учтите, что параметры для этих полей индивидуальны для каждой *PCB* и *Zynq package*.

    Значение основано на длине дорожек печатной платы и выбранном *Zynq package*.Vivado понимает, какой package был выбран, но пользователь должен указать значения для длины дорожек печатной платы.

    Как рассчитать эти длины, объясняется в Интернете (Calculating DDR 3 PCB Lengths (ZedBoard)). Если после завершения лабораторной работы у вас останется время, выполните предложенные там упражнения.

    Но в данный момент, чтобы сэкономить время, мы предоставим вам значения задержек.

11. Установите значения **DQS to Clock Delay** и **Board Delay** как показно на рисунке.

    ![значения для тренинга](./resources/lab2/ZedBoard%20Board%20Training%20Details.png)

12. Нажмите кнопку **OK** для окончания настройки Zynq PS.

13. Сохраните текущий *Block Design*.

---

### **Вопросы:**

* Где можно установить скорость интерфейса DDR?

* Откуда Vivado знает настройки для определенных устройств памяти (Memory Part Configuration Settings)? Откуда вы их возьмете для произвольного устройства?

* Какая максимальная скорость для интерфейса DDR3? Вопрос со звездочкой: какая минимальная скорость?

## Эксперимент 3: Сборка аппаратной платформы и экспорт в Vitis

На текущем этапе мы настроили базовую аппаратную платформу ARM. Наша конфигурация включает в себя настройки тактовых сигналов и контроллера памяти DDR. У нас также подключена периферия UART. Теперь соберем аппаратную платформу и экспортируем ее в Vitis для разработки приложения.

---

### **Обобщенная инструкция:**

Добавьте верхний модуль иерархии (top module). Экспортируйте сборку в Vitis.

---

### **Пошаговая инструкция:**

1. Для проверки нашего *Zynq block design* нажмите кнопку **Validate Design**.

    ![Проверка блочного дизайна](./resources/lab2/Validate%20Block%20Design.png)

2. При успешной валидации в окне *Vivado Design* в области *Sources* нажмите правой кнопкой мыши на **Z_system.bd**, далее выберите **Create HDL Wrapper**.

    ![Создание HDL обертки](./resources/lab2/Create%20HDL%20Wrapper.png)

3. Vivado умеет управлять сгенерированной оберткой за вас. Однако, если ваш *Block Design* является подмодулем более крупного проекта, может быть создана редактируемая HDL-обертка и инстанцирована прямиком в ваш проект. Для этой лабораторной работы пусть Vivado сама управляет оберткой. Нажмите кнопку **OK**.

    ![Опции создания обертки](./resources/lab2/Create%20HDL%20Wrapper%20Options.png)

4. После окончания раскройте список *Design Sources* и дважды нажмите на только что созданную обертку, **Z_system_wrapper.v**. Изучите созданный файл. 

    ![Исходники дизайна](./resources/lab2/Design%20Sources.png)

5. Теперь наш проект готов к сборке. На боковой панели *Flow Navigator* нажмите **Generate Bitstream**. Заметьте, в этом действии нет необходимости, поскольку в этой работе мы не используем PL. Однако большинство проектов использует, поэтому это считается просто хорошим тоном.

    ![Генерация битстрима](./resources/lab2/Generate%20Bitsream.png)

6. Vivado предупредит вас, что еще не были выполнены синтез (synthesis) и имплементация (implementation) и спросит о запуске этих шагов. Нажмите **Yes**. В следующем окне нажмите **Ok**. Можете спокойно игнорировать предупреждения о **AXI BFM License** в окне сообщений внизу.

    ![Запустите синтез и имплементацию](./resources/lab2/Launch%20Synthesis%20and%20Implementation.png)

7. Это может занять несколько минут в зависимости от вашего ПК. Синтез и имплементация происходят в фоне, не пугайтесь, если ничего не появилось. Прогресс отображается в консоли и в верхнем правом углу программы. **Дождитесь завершения всех процессов перед продолжением**!

8. Из раскрывающегося меню верхней панели управления выберите **File->Export->Export Hardware...**

    ![Экспорт hardware](./resources/lab2/Export%20Hardware.png)

9. В появившемся окне *Export Hardware Platform* выберите **Include bitstream/binary** и установите галочку - **Include bitstream**. Нажмите кнопку **Next**.

    ![Экспорт hard](./resources/lab2/Export%20Hard.png)

10. На втором шаге укажите имя и место сохранения файла **.xsa** платформы. Запомните имя и путь. Нажмите кнопку **Next**, а затем **Finish**.

    ![Экспорт hard](./resources/lab2/Export%20Hardware%20File%20Name.png)

11. Из раскрывающегося меню верхней панели управления выберите **Tools->Launch Vitis IDE**.

    ![Опции Экспорта](./resources/lab2/Launch%20Vitis.png)

12. Откроется окно программы Vitis IDE. Для начала необходимо выбрать рабочую директорию для проекта. Для этого в открывшемся окне нажмите кнопку Set Workspace. 

    ![Выбор Workspace](./resources/lab2/Set%20Workspace.png)

13. В появившемся окне создайте директорию, которая будет локальной для вашего проекта. 

    ~~`U:\ZynqLabs\ZynqDesign\ZynqDesign.vitis`~~ - !!! Начиная с версии 2024.2 наблюдается баг, не позволяющий работать с сетевым диском ( будет ошибка компиляции. Кто придумает как исправить - будет большой молодец ). До исправления - использовать локальный диск С: `С:\Users\<USER NAME>\ZynqDesign.vitis`, где `<USER NAME>` - ваш логин в Windows.


14. После загрузки рабочей области в окне *Vitis IDE* Выберите пункт **Create Platform Component**, или в меню **File - New Component - Platform**.  В поле *Component Name* введите `Z_system_platform`. Нажмите кнопку **Next**.

    ![Запуск проекта для создания приложения](./resources/lab2/Create%20Platform%20Component.png)

15. Во вкладке *Flow* выберите пункт **Hardware Design**. В поле **Hardware Design (XSA) for implementation** с помощью кнопки **Browse..** выберите файл с вашим экспортированным проектом - это файл с расширением **.xsa**, который был получен при экспорте из Vivado. Нажмите кнопку **Next**.

    ![Создание платформы](./resources/lab2/Create%20Platform%20Component%20Flow.png)

16. на шаге **OS and Processor** убедитесь, что поле *Operating system* установлено в **standalone**, а *Processor* в **ps7_cortexa9_0**. Нажмите  кнопку **Next**, а затем **Finish**.

    ![выбор ОС](./resources/lab2/Platform%20OS.png)


17. Изучите получившиеся в результате создания платформы файлы. Откройте файл `Sources\hw\Z_system_wrapper.xsa`. Этот файл содержит экспортированные из Vivado *Hardware  Platform  Specification* вашего проекта для Vitis. 

    Остальные файлы, которые вы видите в папке *hw*, были извлечены из .xsa-файла Vitis. Обратите внимание, что .xsa на самом деле представляет собой ZIP-файл, который можно открыть в программе для извлечения данных, например, 7-zip. 
    
    После открытия файла информация о платформе (карта адресов, используемый кристалл и т.п.) аппаратной платформы считывается из него и по умолчанию отображается в окне Vitis.

    
    ![Hardware Platform Specification](./resources/lab2/Vitis%20Hardware%20Platform%20Specification.png)

    В каталоге `ZynqDesign.vitis\Z_system_platform\hw\` файлы **ps7_init.c** и **ps7_init.h** содержат код инициализации для Zynq PS и настройки инициализации для DDR, клоков, PLL и MIO. **ps7_init_gpl.c** и **ps7_init_gpl.h** используются при загрузке из SPI flash и могут отличаться или совпадать с предыдущими. Vitis использует эти настройки при инициализации процессорной системы, чтобы приложение могло быть запущено поверх вычислительной системы. Файл **ps7_init.html** содержит эти настройки в читаемом виде в формате HTML.

    ![ps7_init.html](./resources/lab2/ps7_init.html.png)

    Файл **Z_system_wrapper.bit** - это сгенерированный *bitstream* для PL. На данный момент мы не используем PL, поэтому пустой *bitstream* будет инициализировать PL.

    Директория `Sources\ps7_cortexa9_0\standalone_ps7_cortexa9_0\ps7_cortexa9_0\bsp` содержит программные драйвера для работы компонент микропроцессорной системы.

## Эксперимент 4: Создания и запуск Hello World приложения

В этом эксперименте мы будем использовать *Application Project* для создания и запуска Hello World приложения.

---

### **Обобщенная инструкция:**

Создайте *Application Project*, использующий сгенерированный до этого *Platform Project*. Сгенерируйте и запустите Hello World приложение.

---

### **Пошаговая инструкция:**

1. В *Vitis IDE* перейдите в раздел Examples или выберите **File->New Example**. Выберете пример **Embedded Software Example/Hello World** и нажмите на кнопку **+** рядом с названием или **Create Application Component from Template**.

    ![Новый проект с приложением](./resources/lab2/Create%20Hello%20World.png)


2. В поле **Component name** введите имя нового компонента `hello_world`. Нажмите кнопку **Next**.

    ![Задание имени проекта](./resources/lab2/Create%20Hello%20World%20Component%20Name.png)

3. На вкладке **Hardware** выберите существующую платформу и нажмите кнопку **Next**. 

    ![Выбор аппаратной платформы](./resources/lab2/Create%20Hello%20World%20Hardware.png)

4. Вкладку domain оставляем без изменений. Нажмите **Next**. На последней вкладке нажмите кнопку **Finish**. Дождитесь завершения создания приложения, прежде чем идти дальше.

    ![Выбор домена](./resources/lab2/Create%20Hello%20World%20Domain.png)

5. Исходный код созданного приложения можно найти в функции *main* в файле `/hello_world/src/helloworld.c`. Изучите код приложения и подключаемые файлы.


6. Для сборки проекта в  нижней левой части, во вкладке **Flow** выберете компонент *hello world* и нажмите кнопку **Build**. 

    ![Сборка](./resources/lab2/Build%20Project.png)

7. Если это первая сборка - появится окно вопроса о автоматической сборке платформы. Укажите **Always build platform with application** и нажмите **Save in User Preference**.

    ![Сборка](./resources/lab2/Build%20Platform%20With%20App.png)

7. Для загрузки проекта на отладочную плату и запуска приложения необходимо включить питание платы и запустить программу - терминал. Пример настроек терминала для **putty** - необходимо выбрать тип соединения - *Serial*, скорость - *115200* и номер COM порта. Номер порта может отличаться, можно посмотреть его в диспетчере устройств (Device Manager) или подобрать перебором. Скорее всего это будет **не** COM1. 

    ![Putty настройки](./resources/lab2/Putty%20Serial.png)


8. Нажмите шестеренку рядом с кнопкой **Run**  во вкладке **Flow** для того, чтобы открыть настройки запуска проекта. 

    ![Запуск](./resources/lab2/Run%20Project.png)

По умолчанию будет создана конфигурация для запуска - `hello_world_app_hw_1` в примере. Таких конфигураций можно создавать несколько. 

9. В нашей лаборатории мы можем запустить приложение двумя способами: удаленно и локально. Для локального подключения все настройки можно оставить по умолчанию. Ниже приведена инструкция для удаленного подключения.

   ### Удаленное подключение:

    1. Для выполнения удаленного подключения на компьютере, к которому подключена отладочная плата, должен быть запущен сервер удаленных подключений и программа - терминал (например Putty c приведенными выше настройками).

        ⚠️ - Возможно, сервер может быть запущен автоматический - уточняйте у преподавателя! 
    
    2. Если это не так, то для запуска сервера удаленных подключений надо запустить терминал Windows (Win+R - cmd) и выполнить команду:

        ```bash
        C:\AMDDesignTools\2026.1\Vivado\bin\hw_server -s tcp::60215
        ```
       которая запустит сервер на порту 60215. 

    3. Для создания удаленного подключения мы должны находиться в одной сети с сервером. В окне настройки запуска нажимаем кнопку **New** рядом с параметром **Target Connection**.

       ![Добавить удаленное подключение](./resources/lab2/Remout%20Connection.png)

       Необходимо указать имя, IP адрес (`192.168.215.ХХХ`) и порт (`60215`) сервера для удаленного подключения. **Test Connection** позволяет проверить настройки.

10. Выбираем используемое нами подключение в поле *Target Connection*. Нажимаем **Run**.

    ![Запуск приложения](./resources/lab2/Run%20Application.png)

Теперь наши САПРы инициализируют процессор, загрузят *Hello_World.elf* в память *DDR* и запустят наше приложение.Это должно занять в районе пяти секунд. Можете отслеживать прогресс в консоли.

Результат работы можно посмотреть в терминале компьютера, подключенного к плате.

![Результат работы приложения](./resources/lab2/Lab1_scrin.png)

---

### **Вопросы:**

* Содержат ли СИшные исходники Hello World'a инициализации Zynq?

* Как Zynq был проинициализирован в нашем эксперименте?

## Источники:

https://www.avnet.com/wps/portal/us/products/avnet-boards/avnet-board-families/microzed/microzed-board-family (только с VPN)

https://www.avnet.com/wps/portal/us/products/avnet-boards/avnet-board-families/picozed/picozed-board-family (только с VPN)

https://www.avnet.com/wps/portal/us/products/avnet-boards/avnet-board-families/zedboard/zedboard-board-family (только с VPN)

https://www.xilinx.com/products/silicon-devices/soc/zynq-7000.html

https://www.xilinx.com/products/design-tools/vitis.html

https://www.xilinx.com/developer/products/vivado.html

https://docs.xilinx.com/r/en-US/ug949-vivado-design-methodology/Introduction

https://docs.xilinx.com/v/u/en-US/ug1046-ultrafast-design-methodology-guide

## Ответы

> Как вы думаете, для чего нужен *EMIO*?

Пины *MIO* относятся к I/O *PS*. *EMIO* позволяет *PL* получать доступ периферии *PS*, которая может соединяться с входам/выходам *PL*

> Почему в *I/O Peripherals Configuration tool* периферия упорядочена не в алфавитном порядке?

Периферийные устройства перечислены в порядке приоритета. Периферийные устройства, находящиеся в верхней части списка, как правило, должны быть подключены в первую очередь и имеют меньше опций для подключения к *MIO*.

> Вопрос со звездочкой: Если при включении периферии UART включить опцию *Modem Signal*, куда их следует разместить?

*EMIO*

> Где можно установить скорость интерфейса DDR?

В окнах *Clock Configuration* и *DDR Configuration*.

> Откуда Vivado знает настройки для определенных устройств памяти (Memory Part Configuration Settings)? Откуда вы их возьмете для произвольного устройства?

У Vivado есть предустановленная библиотека устройств памяти. С каждым выпуском Vivado Xilinx добавляет в эту библиотеку новые устройства памяти. Если вы используете кастомное устройство, эти значения должны быть извлечены из датащита DDR.

> Какая максимальная скорость для интерфейса DDR3? Вопрос со звездочкой: какая минимальная скорость?

533 MHz.

Самый медленная скорость? Это зависит от устройства памяти DDR3. Несмотря на то, что Vivado указывает самую низкую скорость в 10 МГц, внутренняя PLL устройства памяти DDR3 не может работать так медленно. Когда выбрано известное запоминающее устройство, Vivado не позволяет пользователям устанавливать скорость на более низкую. В данном случае 303 МГц (Tck_max = 3,3нс).

> Содержат ли СИшные исходники Hello World'a инициализации Zynq?

Нет.

> Как Zynq был проинициализирован в нашем эксперименте?

Когда вы создали конфигурацию запуска (Run Configuration), появилась вкладка *Target Setup*. Здесь есть поле, указывающее на инициализирующий файл TCL. По умолчанию это значение задано для файла *ps7_init.tcl*, который был создан как часть экспорта в SDK. Внутри этого TCL вы найдете ряд команд XMD, которые инициализируют все регистры точно так, как вы указали в Vivado.
